# camera-shots-generator

./: CMakeLists.txt  CameraShot.cpp  CameraShot.h  CameraShotMain.cpp  README.md
scripts/: camera-shot.sh
